--- a/index.html
+++ b/index.html
@@ -1,25 +1,244 @@
 <!doctype html>
 <html lang="ko">
 <head>
-  <meta charset="utf-8">
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Mobi Assistant Portable</title>
+
+  <style>
+    :root{
+      /* 기본은 다크 톤 */
+      color-scheme: dark;
+      --bg: #0b0f19;
+      --panel: rgba(255,255,255,0.06);
+      --panel2: rgba(255,255,255,0.04);
+      --text: rgba(255,255,255,0.92);
+      --muted: rgba(255,255,255,0.68);
+      --line: rgba(255,255,255,0.12);
+      --accent: #7dd3fc;
+      --accent2: #a78bfa;
+      --ok: #34d399;
+      --warn: #fbbf24;
+      --radius: 14px;
+    }
+
+    /* 시스템이 라이트면 자동으로 라이트로 */
+    @media (prefers-color-scheme: light){
+      :root{
+        color-scheme: light;
+        --bg: #f6f7fb;
+        --panel: rgba(0,0,0,0.04);
+        --panel2: rgba(0,0,0,0.03);
+        --text: rgba(0,0,0,0.88);
+        --muted: rgba(0,0,0,0.62);
+        --line: rgba(0,0,0,0.10);
+        --accent: #0369a1;
+        --accent2: #6d28d9;
+        --ok: #059669;
+        --warn: #b45309;
+      }
+    }
+
+    *{ box-sizing:border-box; }
+    body{
+      margin:0;
+      font-family: system-ui, -apple-system, "Segoe UI", "Apple SD Gothic Neo", "Noto Sans KR", Arial, sans-serif;
+      background: radial-gradient(1200px 600px at 20% 0%, rgba(125,211,252,0.18), transparent 60%),
+                  radial-gradient(900px 500px at 90% 10%, rgba(167,139,250,0.18), transparent 55%),
+                  var(--bg);
+      color: var(--text);
+      line-height: 1.6;
+    }
+
+    .wrap{
+      max-width: 920px;
+      margin: 0 auto;
+      padding: 32px 16px 56px;
+    }
+
+    header{
+      padding: 18px 18px 6px;
+      border: 1px solid var(--line);
+      border-radius: var(--radius);
+      background: linear-gradient(180deg, var(--panel), var(--panel2));
+      backdrop-filter: blur(10px);
+    }
+
+    h1{
+      margin: 0 0 8px;
+      font-size: 28px;
+      letter-spacing: -0.2px;
+    }
+    .sub{
+      margin: 0 0 10px;
+      color: var(--muted);
+      font-size: 14px;
+    }
+
+    .grid{
+      margin-top: 14px;
+      display: grid;
+      grid-template-columns: 1.2fr 0.8fr;
+      gap: 14px;
+    }
+    @media (max-width: 820px){
+      .grid{ grid-template-columns: 1fr; }
+    }
+
+    .card{
+      border: 1px solid var(--line);
+      border-radius: var(--radius);
+      background: linear-gradient(180deg, var(--panel), var(--panel2));
+      padding: 16px;
+    }
+
+    h2{
+      margin: 0 0 10px;
+      font-size: 18px;
+      letter-spacing: -0.2px;
+    }
+
+    .btn{
+      display: inline-flex;
+      align-items: center;
+      gap: 10px;
+      padding: 12px 14px;
+      border-radius: 12px;
+      border: 1px solid var(--line);
+      text-decoration: none;
+      color: var(--text);
+      background: rgba(125,211,252,0.10);
+      transition: transform .05s ease, background .15s ease, border-color .15s ease;
+      font-weight: 700;
+    }
+    .btn:hover{
+      background: rgba(125,211,252,0.18);
+      border-color: rgba(125,211,252,0.35);
+      transform: translateY(-1px);
+    }
+    .btn small{
+      font-weight: 600;
+      color: var(--muted);
+    }
+
+    .pill{
+      display:inline-block;
+      padding: 4px 10px;
+      border-radius: 999px;
+      border: 1px solid var(--line);
+      color: var(--muted);
+      font-size: 12px;
+      margin-left: 8px;
+    }
+
+    ol, ul{ margin: 10px 0 0 18px; }
+    code{
+      font-family: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", monospace;
+      font-size: 0.95em;
+      background: rgba(0,0,0,0.22);
+      padding: 2px 6px;
+      border-radius: 8px;
+      border: 1px solid var(--line);
+    }
+    @media (prefers-color-scheme: light){
+      code{ background: rgba(0,0,0,0.06); }
+    }
+
+    .note{
+      margin-top: 10px;
+      padding: 10px 12px;
+      border-radius: 12px;
+      border: 1px dashed var(--line);
+      color: var(--muted);
+      background: rgba(255,255,255,0.03);
+      font-size: 13px;
+    }
+
+    footer{
+      margin-top: 16px;
+      color: var(--muted);
+      font-size: 12px;
+      text-align: center;
+      opacity: .9;
+    }
+
+    .kvs{
+      display:flex;
+      flex-wrap: wrap;
+      gap: 8px;
+      margin-top: 10px;
+    }
+    .kv{
+      padding: 8px 10px;
+      border: 1px solid var(--line);
+      border-radius: 12px;
+      background: rgba(255,255,255,0.03);
+      color: var(--muted);
+      font-size: 12px;
+    }
+    .kv b{ color: var(--text); }
+  </style>
 </head>
+
 <body>
-  <h1>Mobi Assistant Portable</h1>
-  <p>마비노기 모바일용 개인 어시스턴트 (포터블)</p>
+  <div class="wrap">
+    <header>
+      <h1>Mobi Assistant Portable <span class="pill">GitHub Pages</span></h1>
+      <p class="sub">마비노기 모바일용 개인 어시스턴트 (포터블 EXE)</p>
 
-  <h2>다운로드</h2>
-  <p>
-    👉 <a href="https://github.com/klazzik-kr/mobi-assistant/releases/latest">
-      최신 버전 다운로드 (GitHub Releases)
-    </a>
-  </p>
+      <div class="kvs">
+        <div class="kv"><b>배포 방식</b> Releases 다운로드</div>
+        <div class="kv"><b>대상</b> Windows</div>
+        <div class="kv"><b>데이터</b> rune.json</div>
+      </div>
+    </header>
 
-  <h2>사용 방법</h2>
-  <ol>
-    <li>MobiAssistantPortable.exe 다운로드</li>
-    <li>rune.json을 exe와 같은 폴더에 둠</li>
-    <li>exe 실행</li>
-  </ol>
+    <div class="grid">
+      <section class="card">
+        <h2>다운로드</h2>
+        <a class="btn" href="https://github.com/klazzik-kr/mobi-assistant/releases/latest">
+          ⬇ 최신 버전 다운로드
+          <small>(GitHub Releases)</small>
+        </a>
+
+        <div class="note">
+          Releases 페이지의 <b>Assets</b>에서 <code>MobiAssistantPortable.exe</code> 와 <code>rune.json</code>을 받으면 됩니다.
+        </div>
+      </section>
+
+      <section class="card">
+        <h2>빠른 사용법</h2>
+        <ol>
+          <li><code>MobiAssistantPortable.exe</code> 다운로드</li>
+          <li><code>rune.json</code>을 exe와 <b>같은 폴더</b>에 둠</li>
+          <li>exe 실행</li>
+        </ol>
+
+        <div class="note">
+          Windows SmartScreen 경고가 뜰 수 있습니다(개인 제작/서명 없음).
+        </div>
+      </section>
+
+      <section class="card">
+        <h2>업데이트</h2>
+        <ul>
+          <li>새 버전이 나오면 <b>Releases</b>만 갱신하면 됩니다.</li>
+          <li>페이지 링크는 그대로 유지됩니다.</li>
+        </ul>
+      </section>
+
+      <section class="card">
+        <h2>문의/버그</h2>
+        <ul>
+          <li>이슈 제보: 저장소의 <b>Issues</b> 탭</li>
+          <li>기능 제안도 환영</li>
+        </ul>
+      </section>
+    </div>
+
+    <footer>
+      © klazzik-kr · mobi-assistant
+    </footer>
+  </div>
 </body>
 </html>
