--- a/index.html
+++ b/index.html
@@ -207,12 +207,13 @@
       </section>
 
       <section class="card">
-        <h2>빠른 사용법</h2>
-        <ol>
-          <li><code>MobiAssistantPortable.exe</code> 다운로드</li>
-          <li><code>rune.json</code>을 exe와 <b>같은 폴더</b>에 둠</li>
-          <li>exe 실행</li>
-        </ol>
+        <h2>사용 방법</h2>
+<p>
+  👉 <a href="./usage.html"><b>스크린샷으로 보는 사용 방법</b></a>
+</p>
+<div class="note">
+  사용법은 앱 화면 스크린샷 기준으로 계속 업데이트됩니다.
+</div>
 
         <div class="note">
           Windows SmartScreen 경고가 뜰 수 있습니다(개인 제작/서명 없음).
