--- a/usage.html
+++ b/usage.html
@@ -4,6 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Mobi Assistant 사용 방법</title>
+
   <style>
     :root{
       color-scheme: dark;
@@ -16,36 +17,25 @@
       --accent:#7dd3fc;
       --radius:14px;
     }
-    @media (prefers-color-scheme: light){
-      :root{
-        color-scheme: light;
-        --bg:#f6f7fb;
-        --panel:rgba(0,0,0,0.04);
-        --panel2:rgba(0,0,0,0.03);
-        --text:rgba(0,0,0,0.88);
-        --muted:rgba(0,0,0,0.62);
-        --line:rgba(0,0,0,0.10);
-        --accent:#0369a1;
-      }
-    }
     *{ box-sizing:border-box; }
     body{
       margin:0;
       font-family:system-ui,-apple-system,"Segoe UI","Apple SD Gothic Neo","Noto Sans KR",Arial,sans-serif;
-      background: radial-gradient(1200px 600px at 20% 0%, rgba(125,211,252,0.18), transparent 60%),
-                  radial-gradient(900px 500px at 90% 10%, rgba(167,139,250,0.18), transparent 55%),
-                  var(--bg);
+      background:
+        radial-gradient(1200px 600px at 20% 0%, rgba(125,211,252,0.18), transparent 60%),
+        radial-gradient(900px 500px at 90% 10%, rgba(167,139,250,0.18), transparent 55%),
+        var(--bg);
       color:var(--text);
       line-height:1.7;
     }
-    .wrap{ max-width:920px; margin:0 auto; padding:32px 16px 56px; }
+    .wrap{ max-width:960px; margin:0 auto; padding:32px 16px 56px; }
     .top{
       border:1px solid var(--line);
       border-radius:var(--radius);
       background:linear-gradient(180deg,var(--panel),var(--panel2));
       padding:16px;
     }
-    h1{ margin:0 0 6px; font-size:24px; letter-spacing:-0.2px; }
+    h1{ margin:0 0 6px; font-size:24px; }
     .sub{ margin:0; color:var(--muted); font-size:14px; }
     .card{
       margin-top:14px;
@@ -54,28 +44,24 @@
       background:linear-gradient(180deg,var(--panel),var(--panel2));
       padding:16px;
     }
-    h2{ margin:0 0 10px; font-size:18px; letter-spacing:-0.2px; }
+    h2{ margin:0 0 10px; font-size:18px; }
+    h3{ margin:14px 0 8px; font-size:15px; }
     p{ margin:8px 0; }
-    ol,ul{ margin:8px 0 0 18px; }
+    ul{ margin:8px 0 0 18px; }
     a{ color:var(--accent); text-decoration:none; }
     a:hover{ text-decoration:underline; }
     code{
-      font-family:ui-monospace,SFMono-Regular,Menlo,Monaco,Consolas,"Liberation Mono",monospace;
       background:rgba(0,0,0,0.22);
       padding:2px 6px;
       border-radius:8px;
       border:1px solid var(--line);
     }
-    @media (prefers-color-scheme: light){
-      code{ background:rgba(0,0,0,0.06); }
-    }
-    .ph{
-      margin-top:10px;
+    img{
+      display:block;
+      max-width:100%;
       border-radius:12px;
-      border:1px dashed var(--line);
-      padding:14px;
-      color:var(--muted);
-      font-size:13px;
+      border:1px solid var(--line);
+      margin-top:10px;
     }
     .note{
       margin-top:10px;
@@ -83,57 +69,97 @@
       border-radius:12px;
       border:1px dashed var(--line);
       color:var(--muted);
-      background:rgba(255,255,255,0.03);
       font-size:13px;
     }
-    .footer{ margin-top:16px; color:var(--muted); font-size:12px; text-align:center; }
+    .footer{
+      margin-top:16px;
+      color:var(--muted);
+      font-size:12px;
+      text-align:center;
+    }
   </style>
 </head>
 
 <body>
-  <div class="wrap">
-    <div class="top">
-      <h1>사용 방법</h1>
-      <p class="sub">스크린샷을 추가하기 전까지는 “틀리지 않는 범위”로 안내만 둡니다.</p>
-      <p style="margin-top:10px;"><a href="./index.html">← 다운로드 페이지로</a></p>
+<div class="wrap">
+
+  <div class="top">
+    <h1>사용 방법</h1>
+    <p class="sub">실제 앱 화면 기준 가이드</p>
+    <p style="margin-top:10px;"><a href="./index.html">← 다운로드 페이지로</a></p>
+
+    <div class="note">
+      <b>목차</b><br>
+      <a href="#s1">1) 다운로드</a> ·
+      <a href="#s2">2) 룬DB 연결</a> ·
+      <a href="#s3">3) 일반 사용환경</a> ·
+      <a href="#s4">4) 알람</a> ·
+      <a href="#s5">5) 오버레이</a>
     </div>
-
-    <div class="card">
-      <h2>1) 다운로드</h2>
-      <ol>
-        <li><a href="https://github.com/klazzik-kr/mobi-assistant/releases/latest">Releases (latest)</a>로 이동합니다.</li>
-        <li><b>Assets</b>에서 <code>MobiAssistantPortable.exe</code>를 다운로드합니다.</li>
-        <li>필요한 경우 <code>rune.json</code>도 함께 다운로드합니다.</li>
-      </ol>
-      <div class="ph">[추가 예정] Releases 화면 스크린샷: <code>images/usage-01.png</code></div>
-    </div>
-
-    <div class="card">
-      <h2>2) 실행</h2>
-      <ol>
-        <li><code>MobiAssistantPortable.exe</code>를 실행합니다.</li>
-        <li>Windows SmartScreen 경고가 뜰 수 있습니다(개인 제작/서명 없음).</li>
-      </ol>
-      <div class="ph">[추가 예정] 프로그램 실행 화면 스크린샷: <code>images/usage-02.png</code></div>
-    </div>
-
-    <div class="card">
-      <h2>3) 룬 데이터 적용</h2>
-      <p>
-        rune.json 적용 방식은 앱 UI 기준으로 안내가 가장 정확합니다.
-        스크린샷을 추가한 뒤, 이 섹션을 “버튼 위치/메뉴 이름” 기준으로 확정합니다.
-      </p>
-      <div class="ph">[추가 예정] 룬 불러오기/가져오기 화면 스크린샷: <code>images/usage-03.png</code></div>
-
-      <div class="note">
-        <ul>
-          <li>OneDrive 동기화 폴더에서는 파일 잠김/권한 문제로 오동작할 수 있어 일반 폴더 사용을 권장합니다.</li>
-          <li>rune.json이 보이지 않거나 적용이 안 되면 파일명/형식을 먼저 확인하세요.</li>
-        </ul>
-      </div>
-    </div>
-
-    <div class="footer">© klazzik-kr · mobi-assistant</div>
   </div>
+
+  <!-- 1 -->
+  <div class="card" id="s1">
+    <h2>1) 다운로드</h2>
+    <ul>
+      <li><code>MobiAssistant-Portable-251218.exe</code></li>
+      <li><code>mabi_rune_db.json</code></li>
+    </ul>
+    <img src="./usage_image/01_dl.png">
+  </div>
+
+  <!-- 2 -->
+  <div class="card" id="s2">
+    <h2>2) 룬DB 연결</h2>
+    <p>하단의 <b>룬 데이터베이스 관리</b> 버튼 클릭</p>
+    <img src="./usage_image/02_1.png">
+
+    <p><b>Import JSON</b> 클릭</p>
+    <img src="./usage_image/02_2.png">
+
+    <p><code>mabi_rune_db.json</code> 선택</p>
+    <img src="./usage_image/02_3.png">
+
+    <p>룬 DB 로드 완료</p>
+    <img src="./usage_image/02_4.png">
+  </div>
+
+  <!-- 3 -->
+  <div class="card" id="s3">
+    <h2>3) 일반 사용환경</h2>
+    <p>일일/주간/주말 퀘스트 및 상점 관리 화면</p>
+    <img src="./usage_image/03_norm.png">
+  </div>
+
+  <!-- 4 -->
+  <div class="card" id="s4">
+    <h2>4) 알람</h2>
+    <p>결계 / 검은구멍 / 필드보스 알람 표시</p>
+    <img src="./usage_image/04_blackhole.png">
+  </div>
+
+  <!-- 5 -->
+  <div class="card" id="s5">
+    <h2>5) 오버레이</h2>
+
+    <h3>5-1) 물물교환</h3>
+    <img src="./usage_image/05_0.png">
+    <img src="./usage_image/05_1.png">
+    <img src="./usage_image/05_1_1.png">
+    <img src="./usage_image/05_1_2.png">
+    <img src="./usage_image/05_1_3.png">
+    <img src="./usage_image/05_1_4.png">
+    <img src="./usage_image/05_1_5.png">
+    <img src="./usage_image/05_1_6.png">
+
+    <h3>5-2) 어비스 / 레이드</h3>
+    <img src="./usage_image/05_3.png">
+    <img src="./usage_image/05_2.png">
+    <img src="./usage_image/05_2_1.png">
+    <img src="./usage_image/05_2_2.png">
+  </div>
+
+  <div class="footer">© klazzik-kr · mobi-assistant</div>
+</div>
 </body>
 </html>
