--- a/usage.html
+++ b/usage.html
@@ -459,6 +459,33 @@
     </div>
 
     <h3>6-6. 장비 입력(강화/룬/초월/소켓/인챈트 등)</h3>
+        <p style="margin:0;color:var(--muted)">
+      장비 칸에서는 강화 수치, 룬 선택, 초월, 소켓을 빠르게 입력할 수 있습니다.
+      특히 <b>강화 수치</b>와 <b>소켓</b>은 마우스 좌/우클릭으로 빠른 조작이 가능합니다.
+    </p>
+
+    <div class="hint" style="margin-top:12px">
+      <b>강화 수치(무기/엠블럼/장신구/방어구 공통)</b><br/>
+      • <span class="k">좌클릭</span> : +1 증가<br/>
+      • <span class="k">우클릭</span> : -1 감소
+    </div>
+
+    <div class="hint" style="margin-top:12px">
+      <b>소켓(무기/엠블럼/장신구/방어구)</b><br/>
+      • <span class="k">좌클릭</span> : 소켓 단계 변경 <b>0 → 1 → 2 → 3</b> (반복)<br/>
+      • <span class="k">우클릭</span> : 소켓 색상 변경<br/>
+      &nbsp;&nbsp;– 기본: <b>보테</b> → <b>핑테</b> → <b>핑박</b> (반복)
+    </div>
+
+    <div class="hint warn" style="margin-top:12px">
+      <b>특수 색상 조합 (무기 1번 소켓 / 엠블럼)</b><br/>
+      무기 첫 번째 소켓과 엠블럼은 일반 3색 외에 아래 조합까지 순환됩니다.<br/>
+      • <b>보테</b>, <b>핑테</b>, <b>핑박</b><br/>
+      • <b>보테+노/초박</b><br/>
+      • <b>핑테+노/초박</b><br/>
+      • <b>노/초테+노/초박</b>
+    </div>
+
     <div class="two">
       <figure>
         <img src="./usage_image/06_13.png" alt="장비 입력 핵심 영역" />
