--- a/usage.html
+++ b/usage.html
@@ -474,16 +474,16 @@
       <b>소켓(무기/엠블럼/장신구/방어구)</b><br/>
       • <span class="k">좌클릭</span> : 소켓 단계 변경 <b>0 → 1 → 2 → 3</b> (반복)<br/>
       • <span class="k">우클릭</span> : 소켓 색상 변경<br/>
-      &nbsp;&nbsp;– 기본: <b>보테</b> → <b>핑테</b> → <b>핑박</b> (반복)
+      &nbsp;&nbsp;– 기본: <b>보라 테두리(스타프리즘)</b> → <b>핑크 테두리(스타프리즘S)</b> → <b>핑크 박스(온전한 스타프리즘)(반복)
     </div>
 
     <div class="hint warn" style="margin-top:12px">
       <b>특수 색상 조합 (무기 1번 소켓 / 엠블럼)</b><br/>
       무기 첫 번째 소켓과 엠블럼은 일반 3색 외에 아래 조합까지 순환됩니다.<br/>
-      • <b>보테</b>, <b>핑테</b>, <b>핑박</b><br/>
-      • <b>보테+노/초박</b><br/>
-      • <b>핑테+노/초박</b><br/>
-      • <b>노/초테+노/초박</b>
+      • <b>보라 테두리(스타프리즘)</b>, <b>핑크 테두리(스타프리즘s)</b>, <b>핑크 박스(온전한 스타프리즘)</b><br/>
+      • <b>보라 테두리 + 노랑/초록 박스(헬리오도르/그린 헬리오도르)</b><br/>
+      • <b>핑크 테두리 + 노랑/초록 박스(정제된 헬리오도르/정제된 그린 헬리오도르)</b><br/>
+      • <b>노랑 박스/초록 박스(순수한 헬리오도르/순수한 그린 헬리오도르)</b>
     </div>
 
     <div class="two">
